# kraken_regime

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  run.sh
config/: bot-instance-template.yml
config/monitoring/: prometheus.yml
config/monitoring/alertmanager/: alertmanager.yml
config/monitoring/grafana/dashboards/: optimizer-dashboard.json  trading-bot-overview.json
config/monitoring/grafana/provisioning/dashboards/: dashboards.yml
config/monitoring/grafana/provisioning/datasources/: datasources.yml
config/monitoring/prometheus/rules/: bot_alerts.yml
config/redis/: init-instance-registry.lua
docker/: Dockerfile
docker/python/: Dockerfile
docker/rust/: Dockerfile
docs/: CLEANUP_COMPLETE.md  DOCKER_GUIDE.md  DOCS_MAP.md  DOCUMENTATION.md  PROJECT_REVIEW.md  QUICK_REFERENCE.md  RASPBERRY_PI_SETUP.md  README.md  SETUP_GUIDE.md  USAGE.md
examples/: backtest.rs  compare_methods.rs  live_trading.rs
scripts/: analyze.sh
src/: lib.rs
src/integration/: kraken.rs  mod.rs
src/regime/: detector.rs  ensemble.rs  hmm.rs  indicators.rs  mod.rs  types.rs
src/strategy/: enhanced_router.rs  mean_reversion.rs  mod.rs  router.rs
